[web]Fix: issue #6049 zoom out phone on mobile footer

--- a/source/web/src/static/styles/project/siteFooter.less
+++ b/source/web/src/static/styles/project/siteFooter.less
@@ -51,10 +51,6 @@
                             color: #dcdcdc;
                             text-decoration: none;
 
-                            @media @phone {
-                                font-size:14px;
-                            }
-
                             img{
                                 margin-right: 5px;
                                 vertical-align: middle;
@@ -67,6 +63,11 @@
                                 vertical-align: middle;
                                 line-height: 32px;
                                 font-size: 32px;
+
+                                @media @phone {
+                                    line-height: 14px;
+                                    font-size:14px;
+                                }
                             }
                         }
 
